# hubcap

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GITHUB_ACTIONS_SETUP.md  Makefile  README.md  RELEASE.md  config.example.json  cron.sh  dev-requirements.txt  exclusions.json  hub.json  hubcap.py  package-best-practices.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  tox.ini
.circle/: config.yml
.github/: CODEOWNERS  hubcap_dry_run.py  pull_request_template.md
.github/workflows/: hubcap-scheduler.yml  main.yml
hubcap/: cmd.py  exceptions.py  git_helper.py  helper.py  hubcap.py  package.py  package_maintainers.py  records.py  release-carrier.py  release_carrier.py  setup.py  types.py  version.py
tests/: conftest.py  test_fusion_compatibility.py  test_fusion_integration.py  test_git_helper.py  test_helper.py  test_package.py  test_package_maintainers.py  test_records.py  test_update_task_fusion.py  test_version.py  test_version_latest.py  test_version_regex.py
